--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -3,6 +3,12 @@
 $montserrat: 'Montserrat', sans-serif;
 $base-font-family: $montserrat;
 
+// Layout
+$gutter-default: 16px;
+
+// Breakpoints
+$mobile: "320px";
+
 // Colors
 $blue: #00a4ff;
 $light-grey: #f5f5f5;
